# stream-ingestion

./: Cargo.toml  README.md  TODO.md
configs/: kafka_sasl_to_s3.yaml
core/: Cargo.toml
core/src/: config.rs  errors.rs  ingestor.rs  lib.rs  telemetry.rs
core/src/sink/: delta.rs  mod.rs
core/src/source/: kafka.rs  kinesis_stream.rs  mod.rs
docs/: design.md  details.md  exactly_once_processing.md  fault_tolerance.md  lambda_vs_databricks.md  qna.md
examples/: financial-transactions.yaml  source_kafka_sasl.yaml  user-events.yaml
runner-container/: Cargo.toml
runner-container/src/: main.rs
runner-lambda/: Cargo.toml  README.md
runner-lambda/src/: main.rs
src/: config.rs  delta.rs  errors.rs  kafka.rs  lib.rs  main.rs  s3.rs
tests/: integration_test.rs
