[package]
name = "stream-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
# AWS Lambda runtime
lambda_runtime = "0.8"
lambda-web = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Kafka client - temporarily disabled for testing
# rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Delta Lake - temporarily disabled for testing
# deltalake = { version = "0.17", features = ["s3", "datafusion"] }
# arrow = { version = "49.0", features = ["json"] }
# arrow-schema = "49.0"
# datafusion = "34.0"

# AWS SDK
aws-config = "1.0"
aws-sdk-s3 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.15"
