[workspace]
members = [
    "core",
    "runner-lambda",
    "runner-container"
]
resolver = "2"

[package]
name = "stream-ingest"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ingest-core = { path = "core" }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }

rdkafka = { version = "0.36.2", features = ["dynamic-linking"] }

deltalake = { version = "0.26.2", features = ["s3", "datafusion"] }
arrow = { version = "55.1.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2.0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.15"
